kubernetes/homelab/security/configs/vault/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault
  namespace: vault
spec:
  hosts:
  - vaultx.daddyshome.fr
  gateways:
  - vault
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vault-vault.vault.svc.cluster.local
        port:
          number: 8200
